--- a/templates/index.html
+++ b/templates/index.html
@@ -21,12 +21,7 @@
     <section class="projects">
       <h2>Projects</h2>
       <ul>
-        <li><a href="https://neosiae.github.io/memoria/">memoria</a></li>
-<li><a href="https://github.com/neosiae/depsjs">depsjs</a></li>
-<li><a href="https://github.com/neosiae/react-aria-offcanvas">react-aria-offcanvas</a></li>
-<li><a href="https://github.com/neosiae/map-to-localstorage">map-to-localstorage</a></li>
-<li><a href="https://github.com/neosiae/run-event-handler-once">run-event-handler-once</a></li>
-<li><a href="https://github.com/neosiae/string-to-readable-url">string-to-readable-url</a></li>
+        {projects}
       </ul>
     </section>
   </div>
