--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       </ul>
     </main>
     <section class="projects">
-      <h2>Projects</h2>
+      <h2>Projects & modules</h2>
       <ul>
         {projects}
       </ul>
